...
        item.name.contains(normalizedQuery, ignoreCase = true) ||
            item.description.contains(normalizedQuery, ignoreCase = true) ||
            item.metadata.id.contains(normalizedQuery, ignoreCase = true)
    }
}

internal const val ACTION_CONTINUE_ON_ERROR_TAG = "action_continue_on_error"
internal const val ACTION_VARIABLE_PICKER_TAG = "action_variable_picker"

@Composable
@SuppressLint("LocalContextGetResourceValueCall")
internal fun ActionPickerDialog(
    onDismiss: () -> Unit,
...
